# openfisca-data-manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: configuration-v1.md  migrate-from-survey-manager.md
openfisca_data_manager/: __init__.py  temporary.py
openfisca_data_manager/config/: __init__.py  models.py  paths.py
openfisca_data_manager/core/: __init__.py  dataset.py  survey.py  table.py
openfisca_data_manager/io/: __init__.py  writers.py
openfisca_data_manager/processing/: __init__.py
openfisca_data_manager/scripts/: build_collection.py  migrate_config.py
tests/: input_dataframe_generator.py  test_add_survey_to_collection.py  test_migrate_config.py  test_smoke.py  test_surveys.py  test_write_parquet.py  test_yaml_config.py
